# nice-trading

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_backtest.py  setup.py  setup_lightsail.sh
api/: app.py
api/templates/: index.html
api/templates/partials/: bot-list.html  control-panel.html  favourites.html  stats.html  (+3 more)
connectors/: base.py  binance_connector.py
docs/: task-final.md  task.md  walkthrough.md
docs/architecture/: architecture-overview.md  high-level-design.md  implementation-plan.md  low_level.md  tech-stack.md
docs/getting-started/: lightsail-deployment.md  local-setup.md  onboarding.md
docs/research/: advanced-tech-research.md  context-snapshot.md  database-research.md  final_gap_analysis.md  future_suggestions.md  gap-analysis-v1.md  lightsail_deployment_guide.md  readiness_audit.md
docs/user-guide/: readiness-audit.md
engine/: advanced_strategy.py  backtester.py  indicators.py  mean_reversion_strategy.py  risk_manager.py  scalp_strategy.py  sma_strategy.py  strategy_manager.py  trend_breakout_strategy.py
manager/: bot_manager.py  bot_runner.py
nginx/: nginx.conf
nice_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/: cache.py  db.py
tests/: test_core.py  test_strategies.py
utils/: config_handler.py  decorators.py  logger.py  migrate_db.py  save_context.py  telegram_bot.py
workers/: orderbook_fetcher.py
workers/golang/: go.mod  go.sum  main.go
