[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nice-trading"
version = "1.1.0"
description = "Institutional-grade multi-bot trading platform"
authors = [
    {name = "Quantitative Excellence Team", email = "quant@example.com"}
]
dependencies = [
    "ccxt>=4.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "questdb>=1.1.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "alembic>=1.13.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0"
]

[tool.setuptools]
packages = ["api", "manager", "engine", "connectors", "storage", "utils", "workers"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
